Fix word wrapping on button

--- a/1_Web-Development-101/4_Flexbox/Project_Landing-Page/style.css
+++ b/1_Web-Development-101/4_Flexbox/Project_Landing-Page/style.css
@@ -127,7 +127,7 @@ button {
 	font-weight: bold;
 	color: var(--dark-blue);
 	background-color: #3b82f6;
-	width: 105px;
+	width: 118px;
 	border: none;
 	border-radius: .5em;
 	margin-top: 1em;
